changed composite4 to composite 7, and added block.properties for light emiters part 1

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,2 +1,3 @@
 # Shadow Ignore Blocks
-block.10 = water lava flowing_water flowing_lava
+block.10 = water lava
+block.20 = fire	soul_fire pearlescent_froglight verdant_froglight ochre_froglight glowstone lantern soul_lantern campfire soul_campfire
