--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,4 +1,6 @@
 # Shadow Ignore Blocks
 block.10 = water lava
 block.20 = fire	soul_fire pearlescent_froglight verdant_froglight ochre_froglight glowstone lantern soul_lantern campfire soul_campfire
-block.30 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves cherry_leaves azalea_leaves flowering_azalea_leaves grass fern tall_grass large_fern rose_bush lilac peony sugar_cane 
+block.30 = oak_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves cherry_leaves azalea_leaves flowering_azalea_leaves
+block.40 = spruce_leaves
+block.50 = grass fern tall_grass large_fern rose_bush lilac peony sugar_cane
