finished settings and added warmth slider

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -1,2 +1,28 @@
+#LUTS
 customTexture.sunlightLUT = textures/sunlightLUT.png
 customTexture.leavesLUT = textures/leavesLUT.png
+
+#Settings Stuff
+sliders=WARMTH CONTRAST BRIGHTNESS AMBIENT_OCCLUSION NETHER_FOG_STRENGTH NETHER_FOG_TINT_LEVEL OVERWORLD_FOG_STRENGTH RAIN_FOG_STRENGTH THUNDER_FOG_STRENGTH SATURATION SHADOW_AMBIENCE SHADOW_COLOR_R SHADOW_COLOR_G SHADOW_COLOR_B TORCH_COLOR_R TORCH_COLOR_G TORCH_COLOR_B RAIN_COLOR_R RAIN_COLOR_G RAIN_COLOR_B RAIN_COLOR_A
+#Main
+screen=<empty> <empty> SATU VERSION <empty> <empty> [PREFERENCE_SETTINGS]
+
+#PREFERENCE_SETTINGS
+screen.PREFERENCE_SETTINGS=[ATMOSPHERE_SETTINGS] [LIGHT_SHADOW_SETTINGS] <empty> <empty> [CAMERA_SETTINGS]
+
+#Mid Level Screens
+screen.ATMOSPHERE_SETTINGS=[FOG_SETTINGS] [RAIN_SETTINGS] <empty> <empty> [SEASON_SETTINGS] [WAVING_SETTINGS]
+screen.LIGHT_SHADOW_SETTINGS=[LIGHTING_SETTINGS] [SHADOW_SETTINGS]
+screen.CAMERA_SETTINGS=[POST_SETTINGS]
+
+#Lowest Level Screens
+screen.SHADOW_SETTINGS=SHADOWS SHADOW_AMBIENCE SHADOW_MAP_RES <empty> SHADOW_COLOR_R <empty> SHADOW_COLOR_G <empty> SHADOW_COLOR_B
+screen.POST_SETTINGS=CONTRAST BRIGHTNESS SATURATION AMBIENT_OCCLUSION WARMTH
+screen.FOG_SETTINGS=[OVERWORLD_FOG_SETTINGS] [NETHER_FOG_SETTINGS]
+screen.NETHER_FOG_SETTINGS=NETHER_FOG_STRENGTH NETHER_FOG_TINT_LEVEL
+screen.OVERWORLD_FOG_SETTINGS=OVERWORLD_FOG_STRENGTH RAIN_FOG_STRENGTH THUNDER_FOG_STRENGTH
+screen.LIGHTING_SETTINGS=[TORCH_SETTINGS]
+screen.TORCH_SETTINGS=TORCH_COLOR_R <empty> TORCH_COLOR_G <empty> TORCH_COLOR_B
+screen.RAIN_SETTINGS=RAIN_COLOR_R <empty> RAIN_COLOR_G <empty> RAIN_COLOR_B <empty> RAIN_COLOR_A
+screen.WAVING_SETTINGS=WAVING_LEAVES WAVES
+screen.SEASON_SETTINGS=SEASONS SEASON_LEANGTH
