--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -24,5 +24,5 @@ screen.OVERWORLD_FOG_SETTINGS=OVERWORLD_FOG_STRENGTH RAIN_FOG_STRENGTH THUNDER_F
 screen.LIGHTING_SETTINGS=[TORCH_SETTINGS]
 screen.TORCH_SETTINGS=TORCH_COLOR_R <empty> TORCH_COLOR_G <empty> TORCH_COLOR_B
 screen.RAIN_SETTINGS=RAIN_COLOR_R <empty> RAIN_COLOR_G <empty> RAIN_COLOR_B <empty> RAIN_COLOR_A
-screen.WAVING_SETTINGS=WAVING_LEAVES WAVES
+screen.WAVING_SETTINGS=WAVING_LEAVES WAVING_FOLIAGE WAVES
 screen.SEASON_SETTINGS=SEASONS SEASON_LEANGTH
